--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -28,6 +28,8 @@
   display: inline-block;
   justify-content: center;
   align-items: center;
+  position: relative;
+  z-index: 2;
 }
 
 .card:hover {
@@ -45,6 +47,8 @@
   display: inline-block;
   justify-content: center;
   align-items: center;
+  position: relative;
+  z-index: 2;
 }
 
 .smallcard:hover {
